--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,18 @@
 {
   "manifest_version": 2,
 
-  "name": "Getting started example",
-  "description": "This extension shows a Google Image search result for the current page",
+  "name": "Remove Dygod ADs",
+  "description": "This extension will remove www.dygod.net ads automatically in background.",
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html",
-    "default_title": "Click here!"
+    "default_icon": "icon.png"
   },
-  "permissions": [
-    "activeTab",
-    "https://ajax.googleapis.com/"
+  "permissions": [],
+  "content_scripts": [
+    {
+      "matches": ["http://www.dygod.net/*"],
+      "js": ["removeAd.js"]
+    }
   ]
 }
